archive/kubernetes/apps/default/tvheadend/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvheadend
  labels: &labels
    app.kubernetes.io/part-of: tvheadend
    app.kubernetes.io/name: tvheadend
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      runtimeClassName: nvidia
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tvheadend-config
        - name: share
          hostPath:
            path: /mnt/storage/media/recordings
            type: Directory
        - name: dev-dvb
          hostPath:
            path: /dev/dvb
      containers:
        - name: tvheadend
          image: gee1/tvheadend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9981
              protocol: TCP
              name: webui
            - containerPort: 9982
              protocol: TCP
              name: htsp
          volumeMounts:
            - name: config
              mountPath: /config
            - name: share
              mountPath: /recordings
            - name: dev-dvb
              mountPath: /dev/dvb
          securityContext:
            privileged: true
          resources:
            limits:
              nvidia.com/gpu.shared: 1 # requesting 1 GPU
      nodeSelector:
        feature.node.kubernetes.io/usb-ff_0572_689a.present: 'true'
