archive/kubernetes/apps/default/tvheadend/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tvheadend
  labels:
    app.kubernetes.io/instance: tvheadend
    app.kubernetes.io/name: tvheadend
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.2.206
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: tvheadend
    app.kubernetes.io/name: tvheadend
  ports:
    - name: webui
      port: 9981
      targetPort: webui
    - name: htsp
      port: 9982
      targetPort: htsp
